crates/carta/tests/snapshots/golden_e2e__tsv__mediawiki__literal-quotes.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{| class="wikitable"
|-
! note
! detail
|-
| &quot;quotes&quot; stay literal
| comma, stays too
|}
