crates/carta/tests/snapshots/golden_e2e__tsv__mediawiki__ragged.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{| class="wikitable"
|-
! a
! b
! c
|-
| 1
| 2
|
|-
| 4
| 5
| 6
|}
