crates/carta/tests/snapshots/golden_e2e__tsv__mediawiki__spaces.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{| class="wikitable"
|-
! word
! has spaces
|-
| foo bar
| baz qux
|}
